--- a/package.json
+++ b/package.json
@@ -2,7 +2,19 @@
   "name": "@org/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "pnpm nx serve app-offline-betting-tracking",
+    "build": "pnpm nx build app-offline-betting-tracking",
+    "lint:ts": "pnpm nx lint app-offline-betting-tracking",
+    "lint:prettier": "pnpm nx format:check",
+    "lint": "pnpm run lint:ts && pnpm run lint:prettier",
+    "format:ts": "pnpm nx format:write --projects=app-offline-betting-tracking",
+    "format:prettier": "pnpm nx format:write --projects=app-offline-betting-tracking",
+    "format": "pnpm run format:ts && pnpm run format:prettier",
+    "test": "pnpm nx test app-offline-betting-tracking",
+    "test:watch": "pnpm nx test app-offline-betting-tracking --watch",
+    "test:cov": "pnpm nx test app-offline-betting-tracking --coverage --runInBand"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~20.2.0",
@@ -17,6 +29,7 @@
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "~1.19.1",
     "@analogjs/vitest-angular": "~1.19.1",
+    "@angular-architects/ddd": "^20.0.1",
     "@angular-devkit/core": "~20.2.0",
     "@angular-devkit/schematics": "~20.2.0",
     "@angular/build": "~20.2.0",
