--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/core": "~20.2.0",
     "@angular/forms": "~20.2.0",
     "@angular/platform-browser": "~20.2.0",
+    "@angular/platform-browser-dynamic": "~20.2.0",
     "@angular/router": "~20.2.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
@@ -38,16 +39,21 @@
     "@angular/language-service": "~20.2.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "21.5.3",
+    "@nx/devkit": "21.5.3",
     "@nx/eslint": "21.5.3",
     "@nx/eslint-plugin": "21.5.3",
+    "@nx/jest": "21.5.3",
     "@nx/js": "21.5.3",
+    "@nx/playwright": "21.5.3",
     "@nx/vite": "21.5.3",
     "@nx/web": "21.5.3",
     "@nx/workspace": "21.5.3",
+    "@playwright/test": "^1.36.0",
     "@schematics/angular": "~20.2.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.12",
     "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.40.0",
     "@vitest/coverage-v8": "^3.0.5",
@@ -55,10 +61,17 @@
     "angular-eslint": "^20.2.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-playwright": "^1.6.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "~14.6.1",
+    "jest-util": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.5.3",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
