--- a/apps/betting/project.json
+++ b/apps/betting/project.json
@@ -1,27 +1,27 @@
 {
-  "name": "app-offline-betting-tracking",
+  "name": "betting",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "prefix": "app",
-  "sourceRoot": "apps/app-offline-betting-tracking/src",
-  "tags": [],
+  "sourceRoot": "apps/betting/src",
+  "tags": ["domain:betting", "type:app"],
   "targets": {
     "build": {
       "executor": "@angular/build:application",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/app-offline-betting-tracking",
-        "browser": "apps/app-offline-betting-tracking/src/main.ts",
+        "outputPath": "dist/apps/betting",
+        "browser": "apps/betting/src/main.ts",
         "polyfills": ["zone.js"],
-        "tsConfig": "apps/app-offline-betting-tracking/tsconfig.app.json",
+        "tsConfig": "apps/betting/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
           {
             "glob": "**/*",
-            "input": "apps/app-offline-betting-tracking/public"
+            "input": "apps/betting/public"
           }
         ],
-        "styles": ["apps/app-offline-betting-tracking/src/styles.scss"]
+        "styles": ["apps/betting/src/styles.scss"]
       },
       "configurations": {
         "production": {
@@ -52,10 +52,10 @@
       "executor": "@angular/build:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "app-offline-betting-tracking:build:production"
+          "buildTarget": "betting:build:production"
         },
         "development": {
-          "buildTarget": "app-offline-betting-tracking:build:development"
+          "buildTarget": "betting:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -63,25 +63,27 @@
     "extract-i18n": {
       "executor": "@angular/build:extract-i18n",
       "options": {
-        "buildTarget": "app-offline-betting-tracking:build"
+        "buildTarget": "betting:build"
       }
     },
     "lint": {
       "executor": "@nx/eslint:lint"
     },
     "test": {
-      "executor": "@nx/vite:test",
-      "outputs": ["{options.reportsDirectory}"],
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "reportsDirectory": "../../coverage/apps/app-offline-betting-tracking"
+        "jestConfig": "apps/betting/jest.config.ts",
+        "tsConfig": "apps/betting/tsconfig.spec.json"
       }
     },
     "serve-static": {
       "continuous": true,
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "app-offline-betting-tracking:build",
-        "staticFilePath": "dist/apps/app-offline-betting-tracking/browser",
+        "buildTarget": "betting:build",
+        "port": 4200,
+        "staticFilePath": "dist/apps/betting/browser",
         "spa": true
       }
     }
