--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@org/app-betting/domain": ["libs/app-betting/domain/src/index.ts"],
       "@org/betting/domain": ["libs/betting/domain/src/index.ts"]
     }
   },
