feat: add @org/data-access path mapping to tsconfig

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@org/app-betting/domain": ["libs/app-betting/domain/src/index.ts"],
-      "@org/betting/domain": ["libs/betting/domain/src/index.ts"]
+      "@org/betting/domain": ["libs/betting/domain/src/index.ts"],
+      "@org/data-access": ["libs/app-betting/data-access/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
