--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
     "vite": "^7.0.0",
-    "vitest": "^3.0.0"
+    "vitest": "^3.0.0",
+    "zod": "^4.1.11"
   }
 }
