feat(data-access): implement BettingApi and BettingRepository with Zod validation for bet DTOs; refactor app configuration and add interceptors; introduce mappers and entity classes for better data handling

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,7 @@
   "semi": true,
   "quoteProps": "preserve",
   "bracketSpacing": false,
+  "endOfLine": "lf",
   "overrides": [
     {
       "files": "*.html",
